# mathor_cup

./: .gitignore  BASELINE说明.md  README.md  decision_batch_hierarchical.py  decision_batch_q1_penalty.py  decision_batch_q2.py  decision_batch_q2_compare.py  decision_batch_q3.py  decision_batch_q4.py  optimize_experiment.py  pyproject.toml  q1_test_kaiwu.py  quick_experiment.py  run_baseline.py  run_smoke_tests.py  建模全说明.md  建模总纲.md
artifacts/plots/: INDEX.md  RESULTS_SUMMARY.md
artifacts/repro/: latest_repro_summary.json  latest_repro_summary.md
configs/: baseline_v1.json  best_mainline_v1.json  q3_q4_boost_v1.json  q3_q4_candidate_v2.json
docs/: README.md
experiments/results/: best_results.json  decision_batch_q2_20260417_143105.csv  decision_batch_q2_20260417_143105.json  decision_batch_q2_20260417_143105_report.md  decision_batch_q2_20260417_143327.csv  decision_batch_q2_20260417_143327.json  decision_batch_q2_compare_20260418_122510.csv  decision_batch_q2_compare_20260418_122510.json  decision_batch_q2_compare_20260418_122510.md  decision_batch_q2_compare_20260418_123200.csv  decision_batch_q2_compare_20260418_123200.json  decision_batch_q2_compare_20260418_123200.md  decision_batch_q2_compare_20260418_124137.csv  decision_batch_q2_compare_20260418_124137.json  decision_batch_q2_compare_20260418_124137.md  decision_batch_q2_compare_20260418_132450.csv  decision_batch_q2_compare_20260418_132450.json  decision_batch_q2_compare_20260418_132450.md  (+117 more)
scripts/: README.md  generate_project_charts.py  generate_submission_figures.py  reproduce_best_results.py
(+26 files in other folders)
